// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiningSchemaContainer MiningField:Render 1`] = `
<section
  class="mining-schema"
  data-ouia-component-id="mining-container"
  data-ouia-component-type="editor-container"
  data-testid="mining-schema-container"
>
  <div
    class="pf-l-stack pf-m-gutter mining-schema__overview"
  >
    <div
      class="pf-l-stack__item"
    >
      <h4
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Add Fields
      </h4>
    </div>
    <div
      class="pf-l-stack__item"
    >
      <section
        data-ouia-component-id="mining-toolbar"
      >
        <div
          class="pf-l-split pf-m-gutter"
        >
          <div
            class="pf-l-split__item pf-m-fill"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="select-mining-field"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-select__toggle pf-m-typeahead"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select fields"
                    autocomplete="off"
                    class="pf-c-form-control pf-c-select__toggle-typeahead"
                    id="select-mining-field-select-multi-typeahead-typeahead"
                    placeholder="Select fields"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Options menu"
                  aria-labelledby="Select fields to add select-mining-field"
                  class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                  id="select-mining-field"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-c-select__toggle-arrow"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-l-split__item"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-ouia-component-id="add-mining-field"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Add Field(s)
            </button>
          </div>
          <div
            class="pf-l-split__item"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-secondary"
              data-ouia-component-id="add-all-fields"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Add All Fields
            </button>
          </div>
        </div>
      </section>
    </div>
    <div
      class="pf-l-stack__item mining-schema__fields"
    >
      <section>
        <ul
          class="mining-schema-list"
          data-ouia-component-type="mining-schema-list"
        >
          <li
            class="editable-item "
            data-ouia-component-id="field1"
            data-ouia-component-type="mining-field-row"
            data-testid="mining-schema-field-n0"
            id="mining-schema-field-n0"
            tabindex="0"
          >
            <section
              class="editable-item__inner"
            >
              <div
                class="pf-l-split pf-m-gutter"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="mining-schema-list__item__name"
                  >
                    field1
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-plain editable-item__delete"
                    data-ouia-component-id="delete-field"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="mining-schema-field-n0__delete"
                    id="mining-schema-field-n0__delete"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </section>
          </li>
          <li
            class="editable-item "
            data-ouia-component-id="field2"
            data-ouia-component-type="mining-field-row"
            data-testid="mining-schema-field-n1"
            id="mining-schema-field-n1"
            tabindex="0"
          >
            <section
              class="editable-item__inner"
            >
              <div
                class="pf-l-split pf-m-gutter"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="mining-schema-list__item__name"
                  >
                    field2
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-plain editable-item__delete"
                    data-ouia-component-id="delete-field"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="mining-schema-field-n1__delete"
                    id="mining-schema-field-n1__delete"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </section>
          </li>
        </ul>
      </section>
    </div>
  </div>
</section>
`;

exports[`MiningSchemaContainer MiningField:Render::WithNoDataFields 1`] = `
<section
  class="mining-schema"
  data-ouia-component-id="mining-container"
  data-ouia-component-type="editor-container"
  data-testid="mining-schema-container"
>
  <div
    class="pf-l-stack pf-m-gutter mining-schema__overview"
  >
    <div
      class="pf-l-stack__item"
    >
      <h4
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Add Fields
      </h4>
    </div>
    <div
      class="pf-l-stack__item"
    >
      <section
        data-ouia-component-id="mining-toolbar"
      >
        <div
          class="pf-l-split pf-m-gutter"
        >
          <div
            class="pf-l-split__item pf-m-fill"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="select-mining-field"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-select__toggle pf-m-disabled pf-m-typeahead"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select fields"
                    autocomplete="off"
                    class="pf-c-form-control pf-c-select__toggle-typeahead"
                    disabled=""
                    id="select-mining-field-select-multi-typeahead-typeahead"
                    placeholder="Select fields"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Options menu"
                  aria-labelledby="Select fields to add select-mining-field"
                  class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                  disabled=""
                  id="select-mining-field"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-c-select__toggle-arrow"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-l-split__item"
          >
            <button
              aria-disabled="true"
              class="pf-c-button pf-m-primary pf-m-disabled"
              data-ouia-component-id="add-mining-field"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Add Field(s)
            </button>
          </div>
          <div
            class="pf-l-split__item"
          >
            <button
              aria-disabled="true"
              class="pf-c-button pf-m-secondary pf-m-disabled"
              data-ouia-component-id="add-all-fields"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Add All Fields
            </button>
          </div>
        </div>
      </section>
    </div>
    <div
      class="pf-l-stack__item mining-schema__fields"
    >
      <section>
        <ul
          class="mining-schema-list"
          data-ouia-component-type="mining-schema-list"
        >
          <li
            class="editable-item "
            data-ouia-component-id="field1"
            data-ouia-component-type="mining-field-row"
            data-testid="mining-schema-field-n0"
            id="mining-schema-field-n0"
            tabindex="0"
          >
            <section
              class="editable-item__inner"
            >
              <div
                class="pf-l-split pf-m-gutter"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="mining-schema-list__item__name"
                  >
                    field1
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-plain editable-item__delete"
                    data-ouia-component-id="delete-field"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="mining-schema-field-n0__delete"
                    id="mining-schema-field-n0__delete"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </section>
          </li>
          <li
            class="editable-item "
            data-ouia-component-id="field2"
            data-ouia-component-type="mining-field-row"
            data-testid="mining-schema-field-n1"
            id="mining-schema-field-n1"
            tabindex="0"
          >
            <section
              class="editable-item__inner"
            >
              <div
                class="pf-l-split pf-m-gutter"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="mining-schema-list__item__name"
                  >
                    field2
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-plain editable-item__delete"
                    data-ouia-component-id="delete-field"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="mining-schema-field-n1__delete"
                    id="mining-schema-field-n1__delete"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </section>
          </li>
        </ul>
      </section>
    </div>
  </div>
</section>
`;
